src/test/deca/extension/syntax/invalid/array_wrong_call.deca
// Missing bracket and type in the creation of an array

{
    a[ ; 
}